# IOIntercept

./: CMakeLists.txt  ControlFlow  README.md  TODO
docs/: Intercept.pptx
examples/: CMakeLists.txt  setupenv  test.c  test_mpi.c
examples/gtc/: Makefile  chargee.F90  chargei.F90  dataout3d.F90  diagnosis.F90  eqdata.F90  eqplot.F90  fft_gl.F90  field.F90  function.F90  gtc.in  gtc.in.25600  job  job-intercept  load.F90  main-nath.F90  main.F90  module.F90  packup_phi.F90  petsc.F  poisson.F90  pushe.F90  pushfield.F90  pushi.F90  restart.F90  setup.F90  shifte.F90  shifti.F90  smooth.F90  snapshot.F90  sort.c  sort.h  tracking.F90
include/: emapi.h  spectral.h  spectral_decls.h
libemulatebbapi/: CMakeLists.txt  bbapi.c  bbapi.h  bbpublic.c
src/: CMakeLists.txt  emapi.c  empublic.c  libintercept.c  libintercept.h  spectral.c  util.c  wrappers.c
src/include/: libintercept.h
test/: spectral.robot  spectralRobotLibrary.py  test.c
test/bscfs-tester/: clean.sh  runbscfs.sh
